--- a/index.html
+++ b/index.html
@@ -17,14 +17,10 @@ permalink: /
     {% include analytics.html %}
 
     <!-- favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/images/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/images/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/images/favicons/favicon-16x16.png">
-    <link rel="manifest" href="{{ site.baseurl }}/images/favicons/site.webmanifest">
-    <link rel="mask-icon" href="{{ site.baseurl }}/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="{{ site.baseurl }}/images/favicons/favicon.ico">
-    <meta name="msapplication-TileColor" content="#00a300">
-    <meta name="msapplication-config" content="{{ site.baseurl }}/images/favicons/browserconfig.xml">
+    <link rel="icon" href="{{ site.baseurl }}/images/favicons/cropped-gogreen-favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" href="{{ site.baseurl }}/images/favicons/cropped-gogreen-favicon-192x192.png" sizes="192x192" />
+    <link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/favicons/cropped-gogreen-favicon-180x180.png" />
+    <meta name="msapplication-TileImage" content="{{ site.baseurl }}/images/favicons/cropped-gogreen-favicon-270x270.png" />
     <meta name="theme-color" content="#ffffff">
 
     <!-- Stylesheets -->
