fix path issues where root folder was assumed for urls

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ permalink: /
     {% include analytics.html %}
 
     <!-- favicons -->
-    <link rel="icon" href="{{ site.baseurl }}/images/favicons/cropped-gogreen-favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" href="{{ site.baseurl }}/images/favicons/cropped-gogreen-favicon-192x192.png" sizes="192x192" />
-    <link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/favicons/cropped-gogreen-favicon-180x180.png" />
-    <meta name="msapplication-TileImage" content="{{ site.baseurl }}/images/favicons/cropped-gogreen-favicon-270x270.png" />
+    <link rel="icon" href="images/favicons/cropped-gogreen-favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" href="images/favicons/cropped-gogreen-favicon-192x192.png" sizes="192x192" />
+    <link rel="apple-touch-icon-precomposed" href="images/favicons/cropped-gogreen-favicon-180x180.png" />
+    <meta name="msapplication-TileImage" content="images/favicons/cropped-gogreen-favicon-270x270.png" />
     <meta name="theme-color" content="#ffffff">
 
     <!-- Stylesheets -->
@@ -28,7 +28,7 @@ permalink: /
     <link rel="stylesheet" type="text/css" crossorigin="anonymous"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T">
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/theme.css">
+    <link rel="stylesheet" type="text/css" href="css/theme.css">
     <link rel="stylesheet" type="text/css" crossorigin="anonymous"
           href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
           integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf">
