fix relative path url issue

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ permalink: /
 <div class="row pt-sm-4">
     <div class="col text-center"><img id="avatar" class="my-3 my-sm-4" alt="{{ site.name }}"
         src="{% if site.avatar %}{% if site.avatar contains '://' %}{{ site.avatar }}{%
-        else %}{{ site.baseurl }}/{{ site.avatar }}{% endif %}{%
-        else %}{{ site.baseurl }}/images/avatar.svg{% endif %}"></div>
+        else %}{{ site.avatar }}{% endif %}{%
+        else %}images/avatar.svg{% endif %}"></div>
 </div>
 <div class="row">
     <div class="col">
